[Mac][Material Design] Adjust location of Import Bookmarks textfield.

This change aligns the baselines of the Import Bookmarks text and book-
mark button text.

R=avi@chromium.org
BUG=613202

Review-Url: https://codereview.chromium.org/2006053005
Cr-Commit-Position: refs/heads/master@{#396050}

Former-commit-id: 207cf6c07dcd9e9ebcb518a38668e4a08e286d0c